# NEWorld

./: .bettercodehub.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  NEWorld.sln  NEWorld.vcxproj  NEWorld.vcxproj.filters  README.md  SIGNOFF  appveyor.yml  appveyor_install.bat  bin2h.py  circle.yml  compile.sh
Assets/GUI/: InGame.xaml  InventorySlot.xaml  MainMenu.xaml
Assets/Shaders/: Depth.fsh  Depth.vsh  Main.fsh  Main.vsh  Particle.fsh  Particle.vsh  Shadow.fsh  Shadow.vsh  Simple.fsh  Simple.vsh
Core/: CMakeLists.txt
Core/Common/: Application.cpp  Config.h  Dylib.h  JsonHelper.cpp  JsonHelper.h  Logger.cpp  Logger.h  Modules.cpp  RateController.h  StringUtils.cpp
Core/Common/Math/: Matrix.h  Vector.h
Core/Common/Physics/: AABB.h
Core/Game/Api/: nwapi_internal.hpp  nwapigui.hpp
Core/Game/Client/: player.cpp  player.h
Core/Game/Network/: Packet.h  PacketMultiplexer.cpp  PacketMultiplexer.h  PacketReader.h  PacketWriter.h  VarInt.h
Core/Game/Network/Protocol/: Base.h  GamePackets.cpp  LoginPackets.cpp  NoStatePackets.cpp  QueryPackets.cpp
Core/Game/Network/Protocol/Lists/: Login.json  Query.json
Core/Game/Network/States/: Base.h  GameState.h  GameStateServer.h  LoginState.h  LoginStateServer.h  NoState.h  NoStateServer.h  QueryState.h  QueryStateServer.h
Core/Game/Protocol/: LoginPackets.cpp  NoStatePackets.cpp  QueryPackets.cpp
Core/Game/Protocol/Lists/: Game.json  Login.json  NoState.json  Query.json  Readme.txt
Core/Game/Protocol/States/: GameStateServer.h  LoginStateServer.h  NoStateServer.h  QueryStateServer.h
Core/Game/Server/: ServerHost.cpp  ServerHost.h  nwserverapi.cpp  server.cpp
Core/Game/SyncService/: IClientApi.h  InternalServer.cpp  InternalServer.h  WorldStorage.cpp  chunkservice.cpp  chunkservice.hpp  taskdispatcher.cpp  taskdispatcher.hpp
Core/Game/SyncService/world/: Blocks.h  TerrainSectionData.h  nwchunk.cpp  nwchunk.h  playerobject.h  world.cpp  world.h
Core/Game/World/: Blocks.cpp  Blocks.h  Object.h  PlayerObject.h  WorldStorage.cpp  WorldStorage.h  world.cpp  world.h
Core/Game/World/Chunk/: Chunk.cpp  Chunk.h  TerrainSectionData.h  Utils.h  nwchunk.cpp  nwchunk.h
Core/Network/: Packet.h  PacketMultiplexer.cpp  PacketMultiplexer.h  PacketReader.h  PacketWriter.h  ProtocolBase.h  StateBase.h  UUID.h  Uuid.h  VarIntHelper.h
Core/Network/States/: Base.h  GameStateServer.h  LoginStateServer.h  NoStateServer.h  QueryStateServer.h
Core/Protocol/: LoginPackets.cpp  NoStatePackets.cpp  QueryPackets.cpp
Core/Protocol/Lists/: Game.json  NoState.json  Query.json  Readme.txt
Core/Source/Common/: Modules.cpp
Core/Source/Game/SyncService/world/: nwplayer.hpp
Docs/: protocol.md
Modules/: CMakeLists.txt
Modules/CLI/: cli.cpp  main.cpp
Modules/GUI/: CMakeLists.txt  gamescene.cpp  mainclient.cpp  neworld.cpp  nwapigui.cpp  renderdetector.cpp
Modules/Main/: CMakeLists.txt  entry.cpp  worldgen.h
Modules/Main/Source/: entry.cpp  worldgen.cpp  worldgen.h
NEWorld.Base/Math/: Vector3.h
NEWorld.Base/System/: MessageBus.cpp  MessageBus.h
NEWorld.Base/Temp/: Allocation.cpp  Block.cpp  String.h  Temp.h
NEWorld.Game/: ControlContext.h  Definitions.cpp  Definitions.h  Dispatch.cpp  Dispatch.h  FunctionsKit.cpp  FunctionsKit.h  GameSettings.cpp  GameSettings.h  GameView.cpp  Items.h  NEWorld.cpp  OnlinePlayer.cpp  Particles.cpp  Particles.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Setup.cpp  Shader.cpp  Textures.cpp  Textures.h  Tick.cpp  Tick.h  Typedefs.h  stdinclude.h
NEWorld.Game/GUI/: GUI.cpp  GUI.h  InventorySlot.cpp  InventorySlot.h  Noesis.cpp  Noesis.h
NEWorld.Game/Menus/: RenderOptionsMenu.cpp  ShaderOptionsMenu.cpp  SoundMenu.cpp
NEWorld.Game/Renderer/: BufferBuilder.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexBufferBuilder.h
NEWorld.Game/Universe/: CommandHandler.h  Game.h
NEWorldFoundationKit/: Makefile.win  NEWorldFoundationKit.cpp  NEWorldFoundationKit.dev  NEWorldFoundationKit.h  NEWorldFoundationKit.layout  NEWorldFoundationKit.vcxproj  NEWorldFoundationKit.vcxproj.filters  Pen.h  libNEWorldFoundationKit.def  stdafx.cpp
NEWorldFoundationKit/source/: BasicDefinitions.h  Brush.cpp  Brush.h  ControlAndForm.cpp  ControlAndForm.h  Frustum.cpp  FunctionsKit.h  GUI.cpp  Globalization.h  NEWorldFoundationKit.h  Pen.cpp  StdInclude.h  Trigger.cpp  Trigger.h  Typedefs.h  Window.cpp  resource.h  stdafx.cpp
NoesisGUI/: CMakeLists.txt  bin2h.py
NoesisGUI/CMake/: FindNoesis.cmake
PluginSDK/src/: defs.h
Scripts/: CILinuxVcpkgInstall.sh
Shells/: CMakeLists.txt  client.cpp
Shells/CLI/: CMakeLists.txt
Shells/CLI/Source/: cli.cpp  command.hpp  main.cpp
Shells/GUI/: CMakeLists.txt
Shells/GUI/Source/: gamescene.cpp  gamescene.h  neworld.cpp  neworld.h  nwapigui.cpp  renderdetector.cpp  widget.h  widgetmanager.h  window.cpp  window.h
Shells/GUI/Source/renderer/: blockrenderer.cpp  blockrenderer.h  chunkrenderer.h  renderer.h  texture.cpp  texture.h  vertexarray.h  worldrenderer.cpp  worldrenderer.h
Tests/: CMakeLists.txt
Tests/Core/: TestTerrainSectionData.cpp
Tools/: CMakeLists.txt
Tools/PacketCodeGen/: Gen.cpp  InboundGen.cpp  Parse.h  Type.cpp  Type.h
doc/: installation.md  usermanual.md
include/Ogg/: ogg.h
release/Modules/: GUI.nwModule  MainPlugin.nwModule
source/: AudioSystem.cpp  AudioSystem.h  Blocks.cpp  Blocks.h  CBlocks.cpp  ChunkRenderer.cpp  ChunkRenderer.h  Definitions.h  FunctionsKit.h  GLProc.cpp  GUI.cpp  GUI.h  GameView.cpp  Globalization.cpp  Globalization.h  Information.cpp  Items.cpp  Menus.cpp  Menus.h  MultiplayerGame.cpp  NEWorld.cpp  NNN.cpp  Network.cpp  OnlinePlayer.cpp  Player.cpp  Player.h  RandGen.cpp  RandGen.h  Renderer.cpp  Renderer.h  Setup.cpp  Shader.cpp  TextRenderer.cpp  World.cpp  World.h  WorldMenu.cpp
src/Common/: Config.h  Console.cpp  Dylib.cpp  Filesystem.cpp  Filesystem.h  Logger.cpp  Modules.cpp  Utility.h
src/Modules/: CMakeLists.txt
src/api/: ApiCore.h
src/gui/: gamescene.cpp  mainclient.cpp  neworld.cpp  neworld.h  renderdetector.cpp  window.cpp
src/main/: entry.cpp
(+63 files in other folders)
